# wizer-dynamics-server

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: general.yml
configuration/: base.yaml  local.yaml  production.yaml
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/controllers/: exercise.rs  mod.rs  training_plan.rs  user.rs
src/database/: database_configuration.rs  exercise_db.rs  mod.rs  training_plan_db.rs  user_db.rs
src/middleware/: jwt_auth.rs  jwt_config.rs  jwt_controller.rs  jwt_model.rs  mod.rs
src/models/: exercise.rs  mod.rs  training_plan.rs  user.rs
src/route_handlers/: exercise.rs  health_check.rs  jwt.rs  mod.rs  training_plan.rs  user.rs
tests/: health_check.rs
tests/api/: exercise.rs  health_check.rs  helpers.rs  main.rs  training_plan.rs  user.rs
